--- a/style.css
+++ b/style.css
@@ -101,7 +101,50 @@
     font-size: var(--font-weight-bold);
     text-decoration: none;
   }
+  .hero {
+    position: relative;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f1f1f1;
+    overflow: hidden;
+  }
   
+  .hero img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .hero-content {
+    text-align: center;
+    color: #fff;
+    z-index: 1;
+  }
+  
+  .hero-content h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  
+  .hero-content p {
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+  }
+  
+  .hero-content button {
+    background-color: #fff;
+    color: #000;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 30px;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
   /* Main styles */
   
   main {
@@ -159,9 +202,7 @@
   margin-right: 40px;
   }
   
-  main {
-  /* padding: 40px; */
-  }
+
   
   section {
   flex-basis: calc(50% - 30px);
@@ -185,3 +226,69 @@
         padding: 0px 10px 0px 15px;
     }
   }
+  /* Footer */
+
+footer {
+  background-color: var(--wp--preset--color--pale-cyan-blue);
+  color: var(--white-color);
+  padding: 20px;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+.logo img {
+  max-height: 100px;
+  background-color: (var(--white-color));
+}
+
+.footer-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.footer-link {
+  margin-left: 30px;
+  color: var(--white-color);
+  font-size: var(--font-size-primary);
+  font-weight: var(--font-weight-bold);
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.footer-link:hover {
+  color: var(--secondary-color);
+}
+
+@media screen and (max-width: 767px) {
+  footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .logo {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .footer-link {
+    margin-left: 0;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+
+  .footer-links {
+    justify-content: center;
+  }
+}
